--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <div class="collapse navbar-collapse" id="nav">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="" aria-current="page" href="#">Home</a></li>
-                    <li class="nav-item"><a class="" href="#">About</a></li>
-                    <li class="nav-item"><a class="" href="#donate">Donate</a></li>
+                    <li class="nav-item"><a class="" href="#newstitle">News</a></li>
+                    <li class="nav-item"><a class="" href="#donate">resources</a></li>
                     <li class="nav-item"><a class="" href="#contactus">Contact</a></li>
                 </ul>
             </div>
@@ -67,17 +67,17 @@
                     <div class="container">
                         <div class="row row-content">
                             <div class="col-md-8 mx-auto">
-                        <div class="carimgpic d-block w-100 img-fluid">
-                            <div class="d-block w-100 img-fluid" id="pictureofday"></div>
-                            <div class="d-block w-100 img-fluid" id="videoofday"></div>
-                            <div class="d-block w-100 img-fluid">
-                                <h3 id="titleofday"></h3>
-                                <p id="descriptionofday" class="d-none d-sm-block"></p>
+                                <div class="carimgpic d-block w-100 img-fluid">
+                                    <div class="d-block w-100 img-fluid" id="pictureofday"></div>
+                                    <div class="d-block w-100 img-fluid" id="videoofday"></div>
+                                    <div class="d-block w-100 img-fluid">
+                                        <h3 id="titleofday"></h3>
+                                        <p id="descriptionofday" class="d-none d-sm-block"></p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                        </div>
                     </div>
-                </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary bg-dark" data-bs-dismiss="modal">Close</button>
@@ -174,137 +174,166 @@
             </div>
         </div>
     </div>
+    <hr>
 
-<!-- news feed -->
+    <!-- news feed -->
 
     <div class="container">
-  <div class="row align-items-center">
-    <div class="col">
-      One of three columns
-    </div>
-    <div class="col">
-      One of three columns
-    </div>
-    <div class="col">
-      One of three columns
-    </div>
-  </div>
-</div>
-
-    <!-- SEARCH  -->
-    <div class="container">
-
-        <div id="search" class="row row-content">
-
-            <div class="top">
-                <h1>SEARCH SOLAR SYSTEM</h1>
-                <h4>Know Your Home</h4>
-            </div>
-
-            <div class="content">
-
-                <div class="title">
-                    <p>Title :</p>
-                    <p id="title"></p>
-                </div>
-
-                <div class="dateof">
-                    <p>Date :</p>
-                    <p id="dateof"></p>
-                </div>
-
-                <div class="description">
-                    <p>Description :</p>
-                    <p id="description"></p>
-                </div>
-
-                <div class="picture">
-                    <P>Picture :</P>
-                    <div id="picture"></div>
-                </div>
+        <div class="row align-items-center">
+            <div class="col">
 
             </div>
+            <div class="col-7">
 
-            <!-- input field  -->
-            <form class="row row-cols-lg-auto g-3 align-items-center">
-                <div class="col-12">
-                    <div class="input-group">
-                        <input type="text" id="fname" class="form-control" name="fname"
-                            placeholder="Search Solar System">
+                <div id="newstitle">
+                    <h2 id="newsh2">NEWS</h2>
+                </div>
+                <div class="col">
+
+                </div>
+            </div>
+        </div>
+<hr>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col">
+                    <div class="p-3" id="newsFirst">
+                        <p></p>
                     </div>
                 </div>
-                <!-- Search button -->
-                <div class="col-12">
-                    <input type="submit" class="btn btn-primary" id="lname" name="lname" value="Get Info">
+                <div class="col">
+                    <div class="p-3" id="newsSecond">
+                        <p></p>
+                    </div>
                 </div>
-            </form>
+                <div class="col">
+                    <div class="p-3"id="newsThird">
+                        <p></p>
+                    </div>
+                </div>
+            </div>
         </div>
 
-        <!-- video -->
-        <div class="container container-fluid">
+        <hr>
+
+        <!-- SEARCH  -->
+        <div class="container">
+
             <div id="search" class="row row-content">
-                <div class="top align-self-center">
-                    <div class="col col-sm-3 col-md-2">
-                        <img id="logo" src="./img/spacex.svg" class="img-fluid" />
-                    </div>
-                    <div>
-                        <h1>Space X Launch From 09/15/2021 <img id="gif"
-                                src="./img/3a0d5c55702604d706c636a94b5c1afd.gif" height="40" width="40" /></h1>
-                    </div>
+
+                <div class="top">
+                    <h1>SEARCH SOLAR SYSTEM</h1>
+                    <h4>Know Your Home</h4>
                 </div>
+
                 <div class="content">
+
                     <div class="title">
-                        <div class="row row-content">
-                            <iframe width="400" height="400" src="https://www.youtube-nocookie.com/embed/3pv01sSq44w"
-                                title="YouTube video player" frameborder="0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen>
-                            </iframe>
+                        <p>Title :</p>
+                        <p id="title"></p>
+                    </div>
+
+                    <div class="dateof">
+                        <p>Date :</p>
+                        <p id="dateof"></p>
+                    </div>
+
+                    <div class="description">
+                        <p>Description :</p>
+                        <p id="description"></p>
+                    </div>
+
+                    <div class="picture">
+                        <P>Picture :</P>
+                        <div id="picture"></div>
+                    </div>
+
+                </div>
+
+                <!-- input field  -->
+                <form class="row row-cols-lg-auto g-3 align-items-center">
+                    <div class="col-12">
+                        <div class="input-group">
+                            <input type="text" id="fname" class="form-control" name="fname"
+                                placeholder="Search Solar System">
+                        </div>
+                    </div>
+                    <!-- Search button -->
+                    <div class="col-12">
+                        <input type="submit" class="btn btn-primary" id="lname" name="lname" value="Get Info">
+                    </div>
+                </form>
+            </div>
+<hr>
+            <!-- video -->
+            <div class="container container-fluid">
+                <div id="search" class="row row-content">
+                    <div class="top align-self-center">
+                        <div class="col col-sm-3 col-md-2">
+                            <img id="logo" src="./img/spacex.svg" class="img-fluid" />
+                        </div>
+                        <div>
+                            <h1>Space X Launch From 09/15/2021 <img id="gif"
+                                    src="./img/3a0d5c55702604d706c636a94b5c1afd.gif" height="40" width="40" /></h1>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <div class="title">
+                            <div class="row row-content">
+                                <iframe width="400" height="400"
+                                    src="https://www.youtube-nocookie.com/embed/3pv01sSq44w"
+                                    title="YouTube video player" frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen>
+                                </iframe>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
 
-<!-- resources & donate  -->
+        <hr>
 
-        <div class="container">
-  <div id="donate" class="row g-2">
-    <div class="col-6">
-      <div class="p-3 border bg-light">NASA WEBSITE</div>
-    </div>
-    <div class="col-6">
-      <div class="p-3 border bg-light">SPACE X WEBSITE</div>
-    </div>
-    <div class="col-6">
-      <div class="p-3 border bg-light">DONATE</div>
-    </div>
-    <div class="col-6">
-      <div class="p-3 border bg-light">OTHER RESOURCES</div>
-    </div>
-  </div>
-</div>
-<hr>
+            <!-- resources & donate  -->
 
-        <!-- FOOTER  -->
-
-        <footer class="site-footer">
-            <div class="container container-fluid">
-                <div class="row row-content align-items-center">
-                    <div id="contactus" class="col-12">
-                        <h5 id="social">Contact Us</h5>
-                        <a id="social" href="http://instagram.com/">Instagram</a>
-                        <a id="social" href="http://facebook.com/">Facebook</a>
-                        <a id="social" href="http://twitter.com/">Twitter</a>
-                        <a id="social" href="http://youtube.com/">YouTube</a>
-                        <a id="social" href="tel:123-456-7890">Call:123-456-7890</a>
-                        <a id="social" href="mailto:planeteer_info@planeteer.com?subject = Feedback&body = Message">Send
-                            Us Your Feedback</a>
-                        <p id="copyright">&copy; Copyright 2021 UNKOWN</p>
+            <div class="container"> 
+                <div id="donate" class="row g-2">
+                    <div class="col-6">
+                        <div class="p-3 border bg-light "><a class="donatesec" href="https://www.nasa.gov/">NASA'S WEBSITE</a></div>
+                    </div>
+                    <div class="col-6">
+                        <div class="p-3 border bg-light"><a class="donatesec" href="http://stuffin.space/">Stuff in space</a></div>
+                    </div>
+                    <div class="col-6">
+                        <div class="p-3 border bg-light"><a class="donatesec" href="https://www.spacex.com/">Space x'S WEBSITE</a></div>
+                    </div>
+                    <div class="col-6">
+                        <div class="p-3 border bg-light"><a class="donatesec" href="http://astria.tacc.utexas.edu/AstriaGraph/">AstriaGraph</a></div>
                     </div>
                 </div>
             </div>
-        </footer>
+            <hr>
+
+            <!-- FOOTER  -->
+
+            <footer class="site-footer">
+                <div class="container container-fluid">
+                    <div class="row row-content align-items-center">
+                        <div id="contactus" class="col-12">
+                            <h5 id="social">Contact Us</h5>
+                            <a id="social" href="http://instagram.com/">Instagram</a>
+                            <a id="social" href="http://facebook.com/">Facebook</a>
+                            <a id="social" href="http://twitter.com/">Twitter</a>
+                            <a id="social" href="http://youtube.com/">YouTube</a>
+                            <a id="social" href="tel:123-456-7890">Call:123-456-7890</a>
+                            <a id="social"
+                                href="mailto:planeteer_info@planeteer.com?subject = Feedback&body = Message">Send
+                                Us Your Feedback</a>
+                            <p id="copyright">&copy; Copyright 2021 UNKOWN</p>
+                        </div>
+                    </div>
+                </div>
+            </footer>
 </body>
 
 </html>
